--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: lightblue;
-  p { font: 12px/14px sans-serif }
-  .h2 {font-family: "Times New Roman", Times, serif;}
+  h1 { 
+  font-family: Arial; 
+  }
+  
 }
