--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
   background-color: lightblue;
   font: 16px Arial, sans-serif;
+  .header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
 
   
 }
