--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+body {
+  background-color: lightblue;
+  font: 16px Arial, sans-serif;
 
-  .header {
+
+} 
+   .header {
   padding: 60px;
   text-align: center;
   background: #1abc9c;
