--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
   background-color: lightblue;
   font: 16px Arial, sans-serif;
 } 
+.header {
+	padding: 20px;
+	text-align: center;
+	background: #1abc9c;
+	color: white;
+	font-size: 30px;
+}
+	
