--- a/style.css
+++ b/style.css
@@ -1,12 +1,43 @@
 body {
-  background-color: lightblue;
+  background-color: white;
   font: 16px Arial, sans-serif;
 } 
 .header {
-	padding: 20px;
+	position: absolute;
+    top: 0;
+    width: 100%;
+    margin: 0;
+	height: 90px;
+	background-size: 100%;
+	background-image: url("D:/ddd/bg.jpg");
 	text-align: center;
-	background: #1abc9c;
+	left: 0px;
+    margin-left: 0;   
 	color: white;
-	font-size: 30px;
+	font-size: 10px;
+}
+.hidden{
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.hidden:hover {
+    background-color: #008CBA;
+    color: white;
+}
+
+.navig{
+	margin-top: 90px;
+	position: relative;
+	text-align: center;
 }
 	
