Header background image

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
 	height: 90px;
 	background-size: 100%;
-	background-image: url("D:/ddd/bg.jpg");
+	background-image: url("https://github.com/necromyhan/medical-data-storage/blob/main/bg.jpg");
 	text-align: center;
 	left: 0px;
     margin-left: 0;   
