--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     top: 0;
     width: 100%;
     margin: 0;
-	height: 90px;
+	height: 170px;
 	background-size: 100%;
 	background-image: url("https://github.com/necromyhan/medical-data-storage/blob/main/bg.jpg");
 	text-align: center;
@@ -41,3 +41,21 @@ body {
 	text-align: center;
 }
 	
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+input[type=button]:hover{
+    background-color: #008CBA;
+    color: white;
+}
