--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 body {
-  background-color: white;
   font: 16px Arial, sans-serif;
+  background-image: url("https://raw.githubusercontent.com/necromyhan/medical-data-storage/main/bg2.png");
+  color:  #0b4d8f;
 } 
 .header {
 	position: absolute;
-    top: 0;
-    width: 100%;
-    margin: 0;
-	height: 170px;
-	background-size: 100%;
-	background-image: url("https://github.com/necromyhan/medical-data-storage/blob/main/bg.jpg");
-	text-align: center;
-	left: 0px;
-    margin-left: 0;   
-	color: white;
-	font-size: 10px;
+   top: 0;
+   width: 100%;
+   margin: 0;
+   height: 170px;
+   background-size: 100%;
+   background-image: url("https://raw.githubusercontent.com/necromyhan/medical-data-storage/main/bg.jpg");
+   text-align: center;
+   text-shadow: 3px 3px 4px blue;
+   left: 0px;
+   margin-left: 0;   
+   color: white;
+   font-size: 10px;
 }
 .hidden{
     background-color: white; 
@@ -33,6 +35,7 @@ body {
 .hidden:hover {
     background-color: #008CBA;
     color: white;
+    border: 2px solid white;
 }
 
 .navig{
@@ -51,7 +54,7 @@ input[type=button], input[type=submit], input[type=reset] {
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
 }
