--- a/style.css
+++ b/style.css
@@ -1,16 +1,10 @@
-@font-face {
-font-family: 'brab';
-src: url('Proxima_Nova_Condensed_Black.otf';
-}
-
 body {
-  font: 16px;
+  font: 16px Arial, sans-serif;
   background-image: url("https://raw.githubusercontent.com/necromyhan/medical-data-storage/main/bg2.png");
   color:  #0b4d8f;
-  font-family: brab;
-}  
+} 
 .header {
-   position: absolute;
+	position: absolute;
    top: 0;
    width: 100%;
    margin: 0;
@@ -22,7 +16,7 @@ body {
    left: 0px;
    margin-left: 0;   
    color: white;
-   font-size: 13px;
+   font-size: 10px;
 }
 .hidden{
     background-color: white; 
