--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font: 16px Arial, sans-serif;
+  font: 16px Arial bold, sans-serif;
   background-image: url("https://raw.githubusercontent.com/necromyhan/medical-data-storage/main/bg2.png");
   color:  #0b4d8f;
 } 
@@ -16,7 +16,7 @@ body {
    left: 0px;
    margin-left: 0;   
    color: white;
-   font-size: 10px;
+   font-size: 14px;
 }
 .hidden{
     background-color: white; 
