--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font: 16px Arial bold, sans-serif;
+  font: 16px Arial, sans-serif;
   background-image: url("https://raw.githubusercontent.com/necromyhan/medical-data-storage/main/bg2.png");
   color:  #0b4d8f;
 } 
