--- a/style.css
+++ b/style.css
@@ -62,3 +62,17 @@ input[type=button]:hover{
     background-color: #008CBA;
     color: white;
 }
+
+footer {
+    position: fixed; /* Фиксированное положение */
+    left: 0; bottom: 0; /* Левый нижний угол */
+    background-color: #3076d1; /* Цвет текста */
+    width: 100%; /* Ширина слоя */
+	height: 65px;
+	color: white;
+   }
+   
+   #foot{
+	   text-align: center;
+	   margin: 20px;
+   }
