--- a/style.css
+++ b/style.css
@@ -64,12 +64,16 @@ input[type=button]:hover{
 }
 
 footer {
-    position: fixed; /* Фиксированное положение */
+  
     left: 0; bottom: 0; /* Левый нижний угол */
     background-color: #3076d1; /* Цвет текста */
     width: 100%; /* Ширина слоя */
 	height: 65px;
 	color: white;
+
+	margin: -100px auto 0;
+	height: 100px;
+	position: relative;
    }
    
    #foot{
