--- a/style.css
+++ b/style.css
@@ -67,8 +67,9 @@ input[type=button]:hover{
   position: fixed;
   left: 0;
   bottom: 0;
+  height: 60px;
   width: 100%;
-  background-color: red;
+  background-color: #008CBA;
   color: white;
   text-align: center;
 }
